--- a/styles.css
+++ b/styles.css
@@ -61,13 +61,12 @@ body {
   width: 150px;
   height: 200px;
   margin: 10px;
+  position: relative;
   text-align: center;
   color: white;
-  text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  position:relative;
 }
 
 .book-title {
@@ -83,46 +82,10 @@ body {
   font-size: 1em;
 }
 
-/*.book-grid-item .btn-delete {
-  width: 25px;
-  height: 25px;
-  background: red;
-  border-radius: 50%;
-  position: absolute;
-  right: 5px;
-  bottom: 5px;
-  display:none;
-}*/
-
-.book-grid-item .btn-delete {
-  position: absolute;
-  right: 5px;
-  bottom: 5px;
-  display:none;
-  font-size: 2em;
-}
-
-.book-grid-item:hover .btn-delete {
-  display:block;
+.book-grid-item:hover .buttons-overlay {
+  display:flex;
   cursor:pointer;
 }
-
-/*.btn-add-book {
-  border: 5px dashed tomato;
-  background: ;
-  border-radius: 5px;
-  width: 150px;
-  height: 200px;
-  margin: 10px;
-  text-align: center;
-  color: tomato;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  font-size: 5em;
-  font-weight: bold;
-}*/
 
 .add-book-button {
   background-color: #555;
@@ -182,4 +145,77 @@ body {
 
 .form-container .btn:hover, .add-book-button:hover {
   opacity: 1;
+}
+
+.buttons-overlay {
+  position: absolute;
+  bottom: 5px;
+  width: 90%;
+  align-self: center;
+  display: none;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.btn-delete {
+  font-size: 2em;
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
