finished implementation of read checkbox

--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,10 @@ body {
   font-size: 2em;
 }
 
+.btn-delete:hover {
+  color: red;
+}
+
 .switch {
   position: relative;
   display: inline-block;
